--- a/ru/articles/2024/11/1731412749522_3645/app.acme.lego.conf
+++ b/ru/articles/2024/11/1731412749522_3645/app.acme.lego.conf
@@ -10,6 +10,7 @@ ACME_KEY_TYPE='ec256'
 ACME_PFX_PASSWORD='pa$$word'
 ACME_PFX_FORMAT='RC2'
 ACME_CRT_TIMEOUT='30'
+ACME_DAYS='30'
 ACME_SERVICES=(
   'angie.service'
   'nginx.service'
