--- a/ru/articles/2024/11/1731412749522_3645/app.acme.lego.conf
+++ b/ru/articles/2024/11/1731412749522_3645/app.acme.lego.conf
@@ -18,7 +18,11 @@ ACME_SERVICES=(
   'postfix@-.service'
   'prosody.service'
 )
-ACME_DNS='cloudflare'
+ACME_DNS_PROVIDER='cloudflare'
+ACME_DNS_RESOLVERS=(
+  '8.8.8.8'
+  '8.8.4.4'
+)
 export CLOUDFLARE_API_EMAIL='mail@example.com'
 export CLOUDFLARE_API_KEY=''
 export CLOUDFLARE_DNS_API_TOKEN=''
