--- a/ru/articles/2025/01/1738141706973_2996/angie.exchange.conf
+++ b/ru/articles/2025/01/1738141706973_2996/angie.exchange.conf
@@ -37,6 +37,9 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Connection 'Keep-Alive';
+
+    proxy_hide_header 'X-Owa-Version';
+    proxy_hide_header 'X-Powered-By';
   }
 
   client_max_body_size 2G;
