--- a/ru/articles/2025/01/1738141706973_2996/angie.exchange.conf
+++ b/ru/articles/2025/01/1738141706973_2996/angie.exchange.conf
@@ -17,7 +17,7 @@ server {
   if ($http_user_agent ~* (wget|curl|Dark|Python-urllib)) { return 403; }
 
   location = / {
-    return 301 '/owa/';
+    return 301 /owa/;
   }
 
   location = /favicon.ico {
@@ -29,13 +29,13 @@ server {
     proxy_pass $exchange;
 
     proxy_buffering off;
-    proxy_http_version 1.1;
+    proxy_http_version '1.1';
     proxy_request_buffering off;
 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Connection 'Keep-Alive';
+    proxy_set_header 'Host' $host;
+    proxy_set_header 'X-Real-IP' $remote_addr;
+    proxy_set_header 'X-Forwarded-For' $proxy_add_x_forwarded_for;
+    proxy_set_header 'Connection' 'Keep-Alive';
 
     proxy_hide_header 'X-Owa-Version';
     proxy_hide_header 'X-Powered-By';
@@ -43,9 +43,9 @@ server {
 
   client_max_body_size 2G;
   proxy_pass_request_headers on;
-  proxy_pass_header Date;
-  proxy_pass_header Server;
-  proxy_pass_header Authorization;
+  proxy_pass_header 'Date';
+  proxy_pass_header 'Server';
+  proxy_pass_header 'Authorization';
   proxy_read_timeout 3h;
   keepalive_timeout 3h;
   tcp_nodelay on;
