--- a/ru/articles/2025/02/1738783525761_4246/angie.conf
+++ b/ru/articles/2025/02/1738783525761_4246/angie.conf
@@ -1,4 +1,5 @@
 load_module 'modules/ngx_http_brotli_filter_module.so';
+load_module 'modules/ngx_http_brotli_static_module.so';
 load_module 'modules/ngx_http_zstd_filter_module.so';
 load_module 'modules/ngx_http_zstd_static_module.so';
 
