--- a/ru/articles/2025/02/1738828854834_2986/mysql.mysqld.local.cnf
+++ b/ru/articles/2025/02/1738828854834_2986/mysql.mysqld.local.cnf
@@ -7,14 +7,7 @@
 bind_address = 127.0.0.1
 port = 3306
 datadir = /var/lib/mysql
-
-skip_name_resolve
-
-# -------------------------------------------------------------------------------------------------------------------- #
-# LOGGING
-# -------------------------------------------------------------------------------------------------------------------- #
-
-disable_log_bin
+skip_name_resolve = on
 
 # -------------------------------------------------------------------------------------------------------------------- #
 # INNODB
