--- a/ru/articles/2025/02/1738928949894_3353/mariadb.server.local.cnf
+++ b/ru/articles/2025/02/1738928949894_3353/mariadb.server.local.cnf
@@ -9,8 +9,7 @@
 bind_address = 127.0.0.1
 port = 3306
 datadir = /var/lib/mysql
-
-skip_name_resolve
+skip_name_resolve = on
 
 # -------------------------------------------------------------------------------------------------------------------- #
 # FINE TUNING
@@ -28,7 +27,8 @@ thread_stack = 192K
 # LOGGING
 # -------------------------------------------------------------------------------------------------------------------- #
 
-sql_log_bin = 0
+log_error = /var/log/mysql/error.log
+log_slow_query_file = /var/log/mysql/mariadb-slow.log
 
 # -------------------------------------------------------------------------------------------------------------------- #
 # CHARACTER SETS
