--- a/ru/articles/2025/02/1738783525761_4246/angie.local.conf
+++ b/ru/articles/2025/02/1738783525761_4246/angie.local.conf
@@ -6,6 +6,8 @@ client_body_timeout 10;
 client_max_body_size 64m;
 keepalive_requests 100;
 large_client_header_buffers 8 512k;
+real_ip_header 'X-Real-IP';
+real_ip_recursive off;
 reset_timedout_connection on;
 resolver 8.8.8.8 8.8.4.4 ipv6=off;
 send_timeout 2;
@@ -24,13 +26,12 @@ acme_client example 'https://acme-v02.api.letsencrypt.org/directory'
 acme_client_path '/etc/ssl/acme';
 
 # -------------------------------------------------------------------------------------------------------------------- #
-# HEADERS
+# HTTP 2/3
 # -------------------------------------------------------------------------------------------------------------------- #
 
-add_header 'Strict-Transport-Security' 'max-age=63072000; includeSubDomains; preload' always;
-add_header 'X-Content-Type-Options' 'nosniff';
-add_header 'X-Frame-Options' 'SAMEORIGIN';
-add_header 'X-XSS-Protection' '1; mode=block';
+http2 on;
+http3 on; quic_gso on; quic_retry on;
+add_header 'Alt-Svc' 'h3=":$server_port"; ma=86400';
 
 # -------------------------------------------------------------------------------------------------------------------- #
 # SSL
@@ -51,6 +52,31 @@ ssl_stapling_verify on;
 ssl_session_cache shared:SSL:10m;
 ssl_session_tickets off;
 ssl_session_timeout 1d;
+
+# -------------------------------------------------------------------------------------------------------------------- #
+# HEADERS
+# -------------------------------------------------------------------------------------------------------------------- #
+
+add_header 'Strict-Transport-Security' 'max-age=63072000; includeSubDomains; preload' always;
+add_header 'X-Content-Type-Options' 'nosniff';
+add_header 'X-Frame-Options' 'SAMEORIGIN';
+add_header 'X-XSS-Protection' '1; mode=block';
+
+# -------------------------------------------------------------------------------------------------------------------- #
+# PROXY
+# -------------------------------------------------------------------------------------------------------------------- #
+
+# proxy_connect_timeout 300;
+# proxy_http_version '1.1';
+# proxy_read_timeout 300;
+# proxy_redirect off;
+
+# proxy_set_header 'Host' $http_host;
+# proxy_set_header 'Upgrade' $http_upgrade;
+# proxy_set_header 'X-Forwarded-For' $proxy_add_x_forwarded_for;
+# proxy_set_header 'X-Forwarded-Proto' $scheme;
+# proxy_set_header 'X-Forwarded-Ssl' on;
+# proxy_set_header 'X-Real-IP' $remote_addr;
 
 # -------------------------------------------------------------------------------------------------------------------- #
 # BROTLI
