--- a/ru/articles/2025/02/1739866217570_5437/irm.config
+++ b/ru/articles/2025/02/1739866217570_5437/irm.config
@@ -13,7 +13,7 @@ export DOMAIN_ADMIN_PASSWD_PLAIN='pa$$word'
 export SOGO_SIEVE_MASTER_PASSWD='pa$$word'
 
 # -------------------------------------------------------------------------------------------------------------------- #
-# INSTALLED APPS
+# INSTALL APPS
 # -------------------------------------------------------------------------------------------------------------------- #
 
 export USE_IREDADMIN='YES'
