--- a/ru/articles/2025/02/1739866217570_5437/irm.config
+++ b/ru/articles/2025/02/1739866217570_5437/irm.config
@@ -9,8 +9,16 @@ export BACKEND='MYSQL'
 export MYSQL_ROOT_PASSWD='pa$$word'
 export FIRST_DOMAIN='example.com'
 export DOMAIN_ADMIN_PASSWD_PLAIN='pa$$word'
-# export MLMMJADMIN_API_AUTH_TOKEN=''
 export SOGO_SIEVE_MASTER_PASSWD='pa$$word'
+
+# -------------------------------------------------------------------------------------------------------------------- #
+# MLMMJADMIN SETTINGS
+# mlmmjadmin is RESTful API server used to manage mlmmj (mailing list manager).
+# Generate a long string as API auth token, it will be used by your API client:
+# < '/dev/urandom' tr -dc 'A-Z-a-z-0-9' | head -c ${1:-96} | md5sum
+# -------------------------------------------------------------------------------------------------------------------- #
+
+export MLMMJADMIN_API_AUTH_TOKEN=''
 
 # -------------------------------------------------------------------------------------------------------------------- #
 # INSTALL APPS
