--- a/ru/articles/2025/02/1739866217570_5437/irm.config
+++ b/ru/articles/2025/02/1739866217570_5437/irm.config
@@ -2,13 +2,26 @@
 # GENERAL SETTINGS
 # -------------------------------------------------------------------------------------------------------------------- #
 
+# Default mail storage path.
 export STORAGE_BASE_DIR='/var/vmail'
+
+# Preferred web server.
 export WEB_SERVER='NGINX'
+
+# Preferred backend used to store mail accounts.
 export BACKEND_ORIG='MARIADB'
 export BACKEND='MYSQL'
+
+# Password for MySQL administrator.
 export MYSQL_ROOT_PASSWD='pa$$word'
+
+# First mail domain name.
 export FIRST_DOMAIN='example.com'
+
+# Password for the mail domain administrator.
 export DOMAIN_ADMIN_PASSWD_PLAIN='pa$$word'
+
+# SoGo master password.
 export SOGO_SIEVE_MASTER_PASSWD='pa$$word'
 
 # -------------------------------------------------------------------------------------------------------------------- #
@@ -32,13 +45,31 @@ export USE_FAIL2BAN='YES'
 # DATABASE USERS
 # -------------------------------------------------------------------------------------------------------------------- #
 
-export VMAIL_DB_BIND_PASSWD='pa$$word' # Password for user 'vmail'.
-export VMAIL_DB_ADMIN_PASSWD='pa$$word' # Password for user 'vmailadmin'.
-export NETDATA_DB_PASSWD='pa$$word' # Password for user 'netdata'.
-export AMAVISD_DB_PASSWD='pa$$word' # Password for user 'amavisd'.
-export IREDADMIN_DB_PASSWD='pa$$word' # Password for user 'iredadmin'.
-export RCM_DB_PASSWD='pa$$word' # Password for user 'roundcube'.
-export SOGO_DB_PASSWD='pa$$word' # Password for user 'sogo'.
-export IREDAPD_DB_PASSWD='pa$$word' # Password for user 'iredapd'.
-export FAIL2BAN_DB_PASSWD='pa$$word' # Password for user 'fail2ban'.
+# Password for user 'amavisd'.
+export AMAVISD_DB_PASSWD='pa$$word'
+
+# Password for user 'fail2ban'.
+export FAIL2BAN_DB_PASSWD='pa$$word'
+
+# Password for user 'iredadmin'.
+export IREDADMIN_DB_PASSWD='pa$$word'
+
+# Password for user 'iredapd'.
+export IREDAPD_DB_PASSWD='pa$$word'
+
+# Password for user 'netdata'.
+export NETDATA_DB_PASSWD='pa$$word'
+
+# Password for user 'roundcube'.
+export RCM_DB_PASSWD='pa$$word'
+
+# Password for user 'sogo'.
+export SOGO_DB_PASSWD='pa$$word'
+
+# Password for user 'vmailadmin'.
+export VMAIL_DB_ADMIN_PASSWD='pa$$word'
+
+# Password for user 'vmail'.
+export VMAIL_DB_BIND_PASSWD='pa$$word'
+
 #EOF
