--- a/ru/articles/2025/02/1739866217570_5437/irm.config
+++ b/ru/articles/2025/02/1739866217570_5437/irm.config
@@ -13,16 +13,16 @@ export BACKEND_ORIG='MARIADB'
 export BACKEND='MYSQL'
 
 # Password for MySQL administrator.
-export MYSQL_ROOT_PASSWD='pa$$word'
+export MYSQL_ROOT_PASSWD='PASSWORD'
 
 # First mail domain name.
 export FIRST_DOMAIN='example.com'
 
 # Password for the mail domain administrator.
-export DOMAIN_ADMIN_PASSWD_PLAIN='pa$$word'
+export DOMAIN_ADMIN_PASSWD_PLAIN='PASSWORD'
 
 # SoGo master password.
-export SOGO_SIEVE_MASTER_PASSWD='pa$$word'
+export SOGO_SIEVE_MASTER_PASSWD='PASSWORD'
 
 # -------------------------------------------------------------------------------------------------------------------- #
 # MLMMJADMIN SETTINGS
@@ -46,30 +46,30 @@ export USE_FAIL2BAN='YES'
 # -------------------------------------------------------------------------------------------------------------------- #
 
 # Password for user 'amavisd'.
-export AMAVISD_DB_PASSWD='pa$$word'
+export AMAVISD_DB_PASSWD='PASSWORD'
 
 # Password for user 'fail2ban'.
-export FAIL2BAN_DB_PASSWD='pa$$word'
+export FAIL2BAN_DB_PASSWD='PASSWORD'
 
 # Password for user 'iredadmin'.
-export IREDADMIN_DB_PASSWD='pa$$word'
+export IREDADMIN_DB_PASSWD='PASSWORD'
 
 # Password for user 'iredapd'.
-export IREDAPD_DB_PASSWD='pa$$word'
+export IREDAPD_DB_PASSWD='PASSWORD'
 
 # Password for user 'netdata'.
-export NETDATA_DB_PASSWD='pa$$word'
+export NETDATA_DB_PASSWD='PASSWORD'
 
 # Password for user 'roundcube'.
-export RCM_DB_PASSWD='pa$$word'
+export RCM_DB_PASSWD='PASSWORD'
 
 # Password for user 'sogo'.
-export SOGO_DB_PASSWD='pa$$word'
+export SOGO_DB_PASSWD='PASSWORD'
 
 # Password for user 'vmailadmin'.
-export VMAIL_DB_ADMIN_PASSWD='pa$$word'
+export VMAIL_DB_ADMIN_PASSWD='PASSWORD'
 
 # Password for user 'vmail'.
-export VMAIL_DB_BIND_PASSWD='pa$$word'
+export VMAIL_DB_BIND_PASSWD='PASSWORD'
 
 #EOF
