--- a/ru/articles/2025/02/1738783525761_4246/angie.conf
+++ b/ru/articles/2025/02/1738783525761_4246/angie.conf
@@ -10,8 +10,9 @@ error_log '/var/log/angie/error.log' notice;
 pid '/run/angie.pid';
 
 events {
-  worker_connections 65536;
   multi_accept on;
+  use epoll;
+  worker_connections 65536;
 }
 
 http {
