--- a/ru/articles/2025/02/1738783525761_4246/angie.local.conf
+++ b/ru/articles/2025/02/1738783525761_4246/angie.local.conf
@@ -2,7 +2,8 @@
 # GENERAL
 # -------------------------------------------------------------------------------------------------------------------- #
 
-aio on;
+aio threads;
+aio_write on;
 client_body_buffer_size 10K;
 client_body_timeout 35;
 client_header_buffer_size 1k;
@@ -125,7 +126,7 @@ gzip_buffers 16 8k;
 gzip_comp_level 6;
 gzip_disable 'msie6';
 gzip_http_version '1.1';
-gzip_proxied expired no-cache no-store private auth;
+gzip_proxied any;
 gzip_static on;
 gzip_vary on;
 gzip_types
