--- a/ru/articles/2025/02/1738783525761_4246/module.core.conf
+++ b/ru/articles/2025/02/1738783525761_4246/module.core.conf
@@ -1,6 +1,5 @@
 aio threads;
 aio_write on;
-client_max_body_size 64m;
 keepalive_timeout 30s;
 reset_timedout_connection on;
 resolver 8.8.8.8 1.1.1.1 77.88.8.8 valid=60s ipv6=off;
@@ -8,6 +7,13 @@ resolver_timeout 2s;
 sendfile on;
 server_tokens off;
 tcp_nopush on;
+
+# client_body_buffer_size 16k;
+# client_body_timeout 60s;
+# client_header_buffer_size 1k;
+# client_header_timeout 60s;
+client_max_body_size 64m;
+large_client_header_buffers 4 256k;
 
 open_file_cache max=10000 inactive=20s;
 open_file_cache_errors off;
