--- a/ru/articles/2025/02/1738783525761_4246/module.http.proxy.conf
+++ b/ru/articles/2025/02/1738783525761_4246/module.http.proxy.conf
@@ -1,4 +1,5 @@
 # proxy_cache_bypass $http_upgrade;
+# proxy_cache_path '/var/cache/angie' levels=1:2 keys_zone=proxy_cache:10m;
 # proxy_http_version '1.1';
 # proxy_redirect off;
 
