--- a/ru/articles/2025/02/1738855684550_9195/gitlab-ssl.conf
+++ b/ru/articles/2025/02/1738855684550_9195/gitlab-ssl.conf
@@ -38,8 +38,7 @@ server {
   error_log '/var/log/angie/gitlab.error.log';
 
   location / {
-    client_max_body_size 0;
-    gzip off;
+    client_max_body_size 250m;
 
     proxy_connect_timeout 300s;
     proxy_http_version '1.1';
@@ -51,10 +50,16 @@ server {
     proxy_set_header 'Upgrade' $http_upgrade;
     proxy_set_header 'X-Forwarded-For' $proxy_add_x_forwarded_for;
     proxy_set_header 'X-Forwarded-Proto' $scheme;
-    proxy_set_header 'X-Forwarded-Ssl' on;
+    proxy_set_header 'X-Forwarded-Ssl' 'on';
     proxy_set_header 'X-Real-IP' $remote_addr;
 
     proxy_pass http://gitlab-workhorse;
+  }
+
+  location ~ ^/(assets)/ {
+    root '/opt/gitlab/embedded/service/gitlab-rails/public';
+    expires max;
+    add_header 'Cache-Control' 'public';
   }
 
   error_page 404 /404.html;
