--- a/ru/articles/2025/03/1743358316057_3398/dovecot.conf
+++ b/ru/articles/2025/03/1743358316057_3398/dovecot.conf
@@ -1,3 +1,7 @@
+# -------------------------------------------------------------------------------------------------------------------- #
+# FTS: XAPIAN
+# -------------------------------------------------------------------------------------------------------------------- #
+
 plugin {
   fts = xapian
   fts_xapian = partial=3 full=20
