--- a/ru/articles/2025/03/1743358316057_3398/dovecot.conf
+++ b/ru/articles/2025/03/1743358316057_3398/dovecot.conf
@@ -4,7 +4,7 @@
 
 plugin {
   fts = xapian
-  fts_xapian = partial=3 full=20
+  fts_xapian = partial=3 full=20 verbose=0
   fts_autoindex = yes
   fts_enforced = yes
   fts_autoindex_exclude = \Trash
