--- a/ru/articles/2024/11/1732200508187_9870/php-fpm.zabbix.conf
+++ b/ru/articles/2024/11/1732200508187_9870/php-fpm.zabbix.conf
@@ -8,12 +8,9 @@ listen.owner = www-data
 listen.group = www-data
 listen.allowed_clients = 127.0.0.1
 
-pm = dynamic
-pm.max_children = 50
-pm.start_servers = 5
-pm.min_spare_servers = 5
-pm.max_spare_servers = 35
-pm.max_requests = 200
+pm = static
+pm.max_children = 10
+pm.max_requests = 100
 
 access.log = /var/log/php-fpm/$pool.access.log
 slowlog = /var/log/php-fpm/$pool.slow.log
