--- a/ru/articles/2025/02/1739866217570_5437/irm.angie.conf
+++ b/ru/articles/2025/02/1739866217570_5437/irm.angie.conf
@@ -5,44 +5,21 @@ server {
   root '/var/www/html';
   index index.php index.html;
 
-  location = /favicon.ico { access_log off; log_not_found off; }
-  location = /robots.txt { access_log off; log_not_found off; }
-  location ~ /\. { deny all; }
-
   ssl_certificate '/etc/ssl/certs/iRedMail.crt';
   ssl_certificate_key '/etc/ssl/private/iRedMail.key';
 
-  # ------------------------------------------------------------------------------------------------------------------ #
-  # ROUNDCUBEMAIL
-  # ------------------------------------------------------------------------------------------------------------------ #
-
-  location = /mail { return 301 /mail/; }
-  location ~ ^/mail/(bin|config|installer|logs|SQL|temp|vendor)($|/.*) { deny all; }
-  location ~ ^/mail/(CHANGELOG|composer.json|INSTALL|jsdeps.json|LICENSE|README|UPGRADING)($|.*) { deny all; }
-  location ~ ^/mail/plugins/.*/config.inc.php.* { deny all; }
-  location ~ ^/mail/plugins/enigma/home($|/.*) { deny all; }
-
-  location ~ ^/mail/(.*\.php)$ {
-    include fastcgi_params;
-    fastcgi_index index.php;
-    fastcgi_pass unix:/run/php/iredmail.sock;
-    fastcgi_param HTTP_PROXY '';
-    fastcgi_param SCRIPT_FILENAME /opt/www/roundcubemail/$1;
-  }
-
-  location ~ ^/mail/(.*) {
-    alias /opt/www/roundcubemail/$1;
-    index index.php;
-  }
+  location ~ /\. { deny all; }
+  location = /favicon.ico { access_log off; log_not_found off; }
+  location = /robots.txt { access_log off; log_not_found off; }
 
   # ------------------------------------------------------------------------------------------------------------------ #
   # IREDADMIN
   # ------------------------------------------------------------------------------------------------------------------ #
 
-  location = /iredadmin { rewrite ^ /iredadmin/; }
-  location ~ ^/newsletter/ { rewrite /newsletter/(.*) /iredadmin/newsletter/$1 last; }
+  # Static files under '/iredadmin/static'.
   location ~ ^/iredadmin/static/(.*) { alias /opt/www/iredadmin/static/$1; }
 
+  # Python scripts.
   location ~ ^/iredadmin(.*) {
     rewrite ^/iredadmin(/.*)$ $1 break;
 
@@ -59,10 +36,48 @@ server {
     # deny all;
   }
 
+  # iRedAdmin: redirect '/iredadmin' to '/iredadmin/'.
+  location = /iredadmin { rewrite ^ /iredadmin/; }
+
+  # Handle newsletter-style subscription/unsubscription supported in iRedAdmin-Pro.
+  location ~ ^/newsletter/ { rewrite /newsletter/(.*) /iredadmin/newsletter/$1 last; }
+
+  # ------------------------------------------------------------------------------------------------------------------ #
+  # ROUNDCUBEMAIL
+  # ------------------------------------------------------------------------------------------------------------------ #
+
+  # Block access to default directories and files under these directories.
+  location ~ ^/mail/(bin|config|installer|logs|SQL|temp|vendor)($|/.*) { deny all; }
+
+  # Block access to default files under top-directory and files start with same name.
+  location ~ ^/mail/(CHANGELOG|composer.json|INSTALL|jsdeps.json|LICENSE|README|UPGRADING)($|.*) { deny all; }
+
+  # Block plugin config files and sample config files.
+  location ~ ^/mail/plugins/.*/config.inc.php.* { deny all; }
+
+  # Block access to plugin data.
+  location ~ ^/mail/plugins/enigma/home($|/.*) { deny all; }
+  location = /mail { return 301 /mail/; }
+
+  # Redirect URI '/mail' to '/mail/'.
+  location ~ ^/mail/(.*\.php)$ {
+    include fastcgi_params;
+    fastcgi_index index.php;
+    fastcgi_pass unix:/run/php/iredmail.sock;
+    fastcgi_param HTTP_PROXY '';
+    fastcgi_param SCRIPT_FILENAME /opt/www/roundcubemail/$1;
+  }
+
+  location ~ ^/mail/(.*) {
+    alias /opt/www/roundcubemail/$1;
+    index index.php;
+  }
+
   # ------------------------------------------------------------------------------------------------------------------ #
   # PHP
   # ------------------------------------------------------------------------------------------------------------------ #
 
+  # Normal PHP scripts.
   location ~ \.php$ {
     include fastcgi_params;
     fastcgi_index index.php;
