--- a/ru/articles/2025/02/1738783525761_4246/http.default-ssl.conf
+++ b/ru/articles/2025/02/1738783525761_4246/http.default-ssl.conf
@@ -14,7 +14,7 @@ server {
   # ssl_certificate_key '/etc/ssl/_ssc/auth.server.key';
   # ssl_stapling off;
 
-  # location /.well-known/acme-challenge {
+  # location ~* ^/.well-known/acme-challenge/ {
   #   proxy_pass http://127.0.0.1:8444;
   #   proxy_set_header 'Host' $host;
   # }
