--- a/ru/articles/2025/02/1738783525761_4246/http.default.conf
+++ b/ru/articles/2025/02/1738783525761_4246/http.default.conf
@@ -2,7 +2,7 @@ server {
   listen 80 default_server;
   server_name _;
 
-  location ~* ^/.well-known/acme-challenge/ {
+  location /.well-known/acme-challenge {
     proxy_pass http://127.0.0.1:8080;
     proxy_set_header 'Host' $host;
   }
