--- a/ru/articles/2025/02/1738783525761_4246/module.http.core.conf
+++ b/ru/articles/2025/02/1738783525761_4246/module.http.core.conf
@@ -1,12 +1,14 @@
 aio threads;
 aio_write on;
-keepalive_timeout 30s;
-reset_timedout_connection on;
-resolver 1.1.1.1 8.8.8.8 77.88.8.8 valid=60s ipv6=off;
+# keepalive_timeout 30s;
+map_hash_bucket_size 1024;
+# reset_timedout_connection on;
+resolver 1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 77.88.8.8 77.88.8.1 valid=60s ipv6=off;
 resolver_timeout 2s;
 sendfile on;
 server_tokens off;
 tcp_nopush on;
+types_hash_max_size 2048;
 
 # client_body_buffer_size 16k;
 # client_body_timeout 60s;
@@ -15,7 +17,7 @@ tcp_nopush on;
 client_max_body_size 64m;
 large_client_header_buffers 4 256k;
 
-open_file_cache max=10000 inactive=20s;
-open_file_cache_errors off;
-open_file_cache_min_uses 2;
-open_file_cache_valid 30s;
+# open_file_cache max=10000 inactive=20s;
+# open_file_cache_errors off;
+# open_file_cache_min_uses 2;
+# open_file_cache_valid 30s;
