--- a/ru/articles/2025/04/1745919281491_7870/fangfrisch.service
+++ b/ru/articles/2025/04/1745919281491_7870/fangfrisch.service
@@ -1,5 +1,9 @@
 [Unit]
 Description=Updater for unofficial ClamAV signatures
+Documentation=https://rseichter.github.io/fangfrisch/
+ConditionPathExists=/var/lib/fangfrisch/db.sqlite
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 ExecStart=/var/lib/fangfrisch/venv/bin/fangfrisch --conf /etc/fangfrisch.conf refresh
