--- a/ru/articles/2025/05/1746474350543_8577/answer.toml
+++ b/ru/articles/2025/05/1746474350543_8577/answer.toml
@@ -12,5 +12,5 @@ source = "from-dhcp"
 
 [disk-setup]
 filesystem = "xfs"
-# disk-list = ["sda"]
-filter.ID_MODEL = "CT250MX500*"
+disk-list = ["sda"]
+# filter.ID_MODEL = "CT250MX500*"
