--- a/ru/articles/2025/04/1746024817261_9245/clamav-daemon.service
+++ b/ru/articles/2025/04/1746024817261_9245/clamav-daemon.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Clam AntiVirus userspace daemon
 Documentation=https://docs.clamav.net/
+Requires=clamav-daemon.socket
 # Check for database existence
 ConditionPathExistsGlob=/var/lib/clamav/main.{c[vl]d,inc}
 ConditionPathExistsGlob=/var/lib/clamav/daily.{c[vl]d,inc}
@@ -13,3 +14,4 @@ TimeoutStartSec=420
 
 [Install]
 WantedBy=multi-user.target
+Also=clamav-daemon.socket
