--- a/ru/articles/2025/04/1746024817261_9245/clamd.conf
+++ b/ru/articles/2025/04/1746024817261_9245/clamd.conf
@@ -2,7 +2,7 @@
 # LogFile must be writable for the user running daemon.
 # A full path is required.
 # Default: disabled
-#LogFile /var/log/clamav/clamav.log
+LogFile /var/log/clamav/clamav.log
 
 # By default the log file is locked for writing - the lock protects against
 # running clamd multiple times (if want to run another clamd, please
@@ -65,7 +65,7 @@ ExtendedDetectionInfo yes
 # It is recommended that the directory where this file is stored is
 # also owned by root to keep other users from tampering with it.
 # Default: disabled
-PidFile /run/clamav/clamd.pid
+#PidFile /run/clamav/clamd.pid
 
 # Optional path to the global temporary directory.
 # Default: system specific (usually /tmp or /var/tmp).
@@ -89,7 +89,7 @@ DatabaseDirectory /var/lib/clamav
 
 # Path to a local socket file the daemon will listen on.
 # Default: disabled (must be specified by a user)
-LocalSocket /run/clamav/clamd.ctl
+#LocalSocket /run/clamav/clamd.ctl
 
 # Sets the group ownership on the unix socket.
 # Default: disabled (the primary group of the user running clamd)
