--- a/ru/articles/2025/05/1746650362510_8877/app.sql.backup.conf
+++ b/ru/articles/2025/05/1746650362510_8877/app.sql.backup.conf
@@ -2,8 +2,7 @@ SQL_TYPE='mysql'
 SQL_DATA='/tmp'
 SQL_PASS='PASSWORD'
 SQL_DB=('DB_1' 'DB_2' 'DB_3')
-SYNC=0
-SYNC_HOST='192.168.1.1'
-SYNC_PASS='PASSWORD'
+SYNC_HOST=''
+SYNC_PASS=''
 SYNC_DST='/remote/directory'
 MAIL_TO='mail@example.com'
