--- a/ru/articles/2025/05/1746650362510_8877/app.sql.backup.conf
+++ b/ru/articles/2025/05/1746650362510_8877/app.sql.backup.conf
@@ -8,6 +8,9 @@ SYNC_HOST='192.168.1.1'
 SYNC_USER='root'
 SYNC_PASS='PASSWORD'
 SYNC_DST='/remote/directory'
+SYNC_DEL=0
+SYNC_RSF=0
+SYNC_PED=0
 SUM_ON=0
 ENC_ON=0
 ENC_PASS='SECRET'
