--- a/ru/articles/2025/05/1746650362510_8877/app.backup.sql.conf
+++ b/ru/articles/2025/05/1746650362510_8877/app.backup.sql.conf
@@ -8,6 +8,7 @@ SQL_DST='/tmp'
 SQL_USER='backup'
 SQL_PASS='PASSWORD'
 ENC_ON=0
+ENC_APP='gpg'
 ENC_PASS='SECRET'
 SYNC_ON=0
 SYNC_HOST='192.168.1.1'
