--- a/ru/articles/2025/02/1738783525761_4246/module.http.ssl.conf
+++ b/ru/articles/2025/02/1738783525761_4246/module.http.ssl.conf
@@ -8,5 +8,5 @@ ssl_prefer_server_ciphers off;
 ssl_session_cache shared:SSL:10m;
 ssl_session_tickets off;
 ssl_session_timeout 1d;
-ssl_stapling on;
-ssl_stapling_verify on;
+# ssl_stapling on;
+# ssl_stapling_verify on;
