--- a/ru/articles/2025/02/1738831926310_7601/opensearch.yml
+++ b/ru/articles/2025/02/1738831926310_7601/opensearch.yml
@@ -33,4 +33,4 @@ plugins.security.system_indices.indices: [.plugins-ml-agent, .plugins-ml-config,
   .opensearch-notifications-*, .opensearch-notebooks, .opensearch-observability, .ql-datasources,
   .opendistro-asynchronous-search-response*, .replication-metadata-store, .opensearch-knn-models,
   .geospatial-ip2geo-data*, .plugins-flow-framework-config, .plugins-flow-framework-templates,
-  .plugins-flow-framework-state]
+  .plugins-flow-framework-state, .plugins-search-relevance-experiment, .plugins-search-relevance-judgment-cache]
