--- a/ru/articles/2025/02/1738831926310_7601/opensearch.yml
+++ b/ru/articles/2025/02/1738831926310_7601/opensearch.yml
@@ -5,6 +5,7 @@ path.logs: '/var/log/opensearch'
 network.host: 127.0.0.1
 http.port: 9200
 discovery.type: single-node
+bootstrap.memory_lock: true
 action.auto_create_index: false
 node.max_local_storage_nodes: 3
 plugins.security.disabled: true
