--- a/ru/articles/2024/11/1732200508187_9870/angie.zabbix.conf
+++ b/ru/articles/2024/11/1732200508187_9870/angie.zabbix.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   server_name example.org;
-  root '/usr/share/zabbix';
+  root '/usr/share/zabbix/ui';
   index index.php;
 
   location = /favicon.ico { log_not_found off; }
@@ -16,9 +16,9 @@ server {
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_index index.php;
 
-    fastcgi_param DOCUMENT_ROOT /usr/share/zabbix;
-    fastcgi_param SCRIPT_FILENAME /usr/share/zabbix$fastcgi_script_name;
-    fastcgi_param PATH_TRANSLATED /usr/share/zabbix$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT /usr/share/zabbix/ui;
+    fastcgi_param SCRIPT_FILENAME /usr/share/zabbix/ui$fastcgi_script_name;
+    fastcgi_param PATH_TRANSLATED /usr/share/zabbix/ui$fastcgi_script_name;
 
     include fastcgi_params;
     fastcgi_param QUERY_STRING $query_string;
