--- a/ru/articles/2025/02/1738783525761_4246/module.http.core.conf
+++ b/ru/articles/2025/02/1738783525761_4246/module.http.core.conf
@@ -3,7 +3,7 @@ aio_write on;
 # keepalive_timeout 30s;
 map_hash_bucket_size 1024;
 # reset_timedout_connection on;
-resolver 1.1.1.1 1.0.0.1 8.8.8.8 8.8.4.4 208.67.222.222 208.67.220.220 77.88.8.8 77.88.8.1 valid=60s ipv6=off;
+resolver 8.8.8.8 77.88.8.8 1.1.1.1 valid=60s ipv6=off;
 resolver_timeout 2s;
 sendfile on;
 server_tokens off;
